crates/forge_app/src/snapshots/forge_app__operation__tests__fs_read_with_explicit_range.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<file
  path="/home/user/test.txt"
  display_lines="2-3"
  total_lines="5"
><![CDATA[2:Line 1
3:Line 2
4:Line 3]]>
<truncated>3 more lines not shown. Full output: read /home/user/test.txt with start_line=4 to continue from where this left off.</truncated>
</file>
