crates/forge_app/src/snapshots/forge_app__operation__tests__fs_search_very_lengthy_one_line_match.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="1049"
  total_lines="1"
  display_lines="0-0"
  pattern="search"
  glob="*.txt"
  reason="Results truncated due to exceeding the 1049 bytes size limit. Please use a more specific search pattern"
><![CDATA[]]>
<truncated>1 more matches not shown. The first match alone exceeds the size limit. Narrow the pattern, or read the file directly with a line range.</truncated>
</search_results>
